# mantra-pratice

./: .gitignore  README.md  docker-compose.yml  dockerfile  pyproject.toml  setup_local_ut.sh  teardown_local_ut.sh
scripts/: README.md  alembic.ini  create_users.py  generate_jwt_token.py  init_db.py  migrate.sh  setup_alembic.py
scripts/alembic/: env.py
scripts/alembic/versions/: 04599f02be05_init.py
src/: main.py
src/api/auth/: authenticator.py  schema.py
src/api/v1/: router.py
src/api/v1/record/: controller.py
src/api/v1/user/: controller.py  schema.py
src/constant/: granularity.py
src/core/: settings.py
src/core/contextvar/: trace_id.py
src/dependency/: contextvar.py  db.py  repository.py  service.py  setting.py
src/model/: record.py  user.py
src/repository/: record.py  user.py
src/service/: record.py  user.py
src/service/user/: schema.py  service.py
src/util/: logger.py
tests/: conftest.py
tests/api/auth/: test_authenticator.py
tests/api/v1/: test_record_controller.py  test_user_controller.py
tests/service/: test_record_service.py  test_user_service.py
